fix mobile modal behind navbar

--- a/code/resources/public/ui/css/nuvla-ui.css
+++ b/code/resources/public/ui/css/nuvla-ui.css
@@ -1,5 +1,5 @@
 #nuvla-ui-sidebar {
-    z-index: 1001;
+    z-index: 1000;
     overflow: hidden;
 }
 
